Create js directory, update Makefile to generate minified js and place it in the correct directories, update make clean.

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 contentdir = "content"
 layoutdir = "layouts"
 publishdir = "public"
+staticdir = "static"
 builddrafts = false
 # baseurl = "http://www.mirellavanteulingen.nl/"
 baseurl = "http://localhost:1313/"
