--- a/config.toml
+++ b/config.toml
@@ -3,8 +3,8 @@ layoutdir = "layouts"
 publishdir = "public"
 staticdir = "static"
 builddrafts = false
-# baseurl = "http://www.mirellavanteulingen.nl/"
-baseurl = "http://localhost:1313/"
+baseurl = "http://www.mirellavanteulingen.nl/"
+# baseurl = "http://localhost:1313/"
 languageCode = "en-us"
 title = "Mirella van Teulingen"
 canonifyurls = true
