Use https, add .htaccess. Update public.

--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ layoutdir = "layouts"
 publishdir = "public"
 staticdir = "static"
 builddrafts = false
-baseurl = "http://www.mirellavanteulingen.nl/"
+baseurl = "https://mirellavanteulingen.nl/"
 # baseurl = "http://localhost:1313/"
 languageCode = "en-us"
 title = "Mirella van Teulingen"
